--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discoloration</title>
+    <title>Discoloration Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Discoloration Game</h1>
-    <div id="game-container">
-        <div id="level-display">
-            Level: <span id="current-level">1</span>
-        </div>
-        <div id="grid"></div>
-        <div id="move-counter">
-            Moves: <span id="move-count">0</span>
-        </div>
-        <button id="restart">Restart Level</button>
-        <button id="solve-game">Solve Game</button>
+    <div id="start-page">
+        <h1>Welcome to the Discoloration Game!</h1>
+        <h2>Instructions</h2>
+        <p>1. Click on a cell to toggle its state (green or grey).</p>
+        <p>2. Clicking a cell will also toggle its neighboring cells.</p>
+        <p>3. The goal is to turn all cells green.</p>
+        <p>4. Use the "Restart Level" button to reset the current level.</p>
+        <p>5. Use the "Solve Level" button to get the answer.</p>
+        <p>Good luck!</p>
+        <button id="start-button">Start Game</button>
+    </div>
 
+    <div id="game" style="display: none;">
+        <div id="level-display">Level: 1</div>
+        <div id="grid-container"></div>
+        <div id="move-counter">Moves: 0</div>
+        <button id="restart-button">Restart Level</button>
+        <button id="solve-button">Solve Level</button>
     </div>
 
     <script src="script.js"></script>
